--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.17",
-    "nodemon": "^2.0.6",
     "validator": "^13.1.17"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
